# astra

./: .gitignore  .gitmodules  Android.mk  Application.mk  CMakeLists.txt  Generate.bat  InstallVS.txt.in  copy.bat  gen_vs2013_proj.bat  gen_vs2013_proj_win32.bat  gen_vs2013_proj_win32.cmd  gen_vs2013_proj_win64.bat  gen_vs2013_proj_win64.cmd  gen_vs2015_proj_win32.bat  gen_vs2015_proj_win32.cmd  gen_vs2015_proj_win64.bat  gen_vs2015_proj_win64.cmd  generate.cmd  update_proj.bat  update_proj.sh
docs/: CMakeLists.txt  Doxyfile  Makefile  concepts.rst  conf.py  conf.py.in  gettingstarted.rst  helloworld.rst  index.rst  installation.rst  make.bat  retrievingstreamdata.rst  simpledepthreader.rst  simpledepthviewer.rst
examples/: CMakeLists.txt  key_handler.h
examples/DepthReader/: CMakeLists.txt  main.c  main.cpp
examples/DepthReaderEvent/: Android.mk  CMakeLists.txt  main.cpp
examples/HandReader/: Android.mk  CMakeLists.txt  main.c
examples/SimpleColorViewer/: CMakeLists.txt  SimpleColorViewer.cpp  SimpleColorViewer.h  SimpleViewer.cpp  SimpleViewer.h  utils.h
examples/SimpleViewer/: CMakeLists.txt  SimpleViewer.cpp  SimpleViewer.h  SimpleViewer.vcxproj  main.cpp  utils.h
examples/cmake/: FindSenseKit.cmake
examples/sfml/: CMakeLists.txt  main.cpp
samples/: .gitignore  CMakeLists.txt  README.txt
samples/DepthReader/: Android.mk  CMakeLists.txt  main.c
samples/DepthReaderEvent/: CMakeLists.txt  main.cpp
samples/HandReader/: CMakeLists.txt  main.c
samples/SimpleColorViewer/: CMakeLists.txt  utils.h
samples/SimpleViewer/: CMakeLists.txt  SimpleViewer.h
samples/c-api/: CMakeLists.txt
samples/common/: LitColorVisualizer.h  LitDepthVisualizer.h  LitDepthVisualizer.hpp  lit_depth_visualizer.hpp
samples/cpp-api/: CMakeLists.txt
samples/gl/: CMakeLists.txt
samples/plugins/: CMakeLists.txt
samples/scripts/: build_samples.sh
samples/sfml/: CMakeLists.txt
samples/tools/: CMakeLists.txt
src/: CMakeLists.txt  ClientDepth.cpp  ColorStream.h  Context.cpp  Context.h  DepthStream.h  Device.cpp  Device.h  DeviceAdapter.h  DeviceManager.cpp  DeviceManager.h  DeviceRegistry.cpp  DeviceRegistry.h  DeviceStreamSource.cpp  DeviceStreamSource.h  DriverAdapter.cpp  DriverAdapter.h  DriverService.cpp  DriverService.h  MockContext.cpp  MockContext.h  OpenNIPlugin.cpp  OpenNIPlugin.h  PluginBase.cpp  PluginBase.h  PluginContext.cpp  PluginContext.h  PluginService.cpp  PluginService.h  PluginServiceDelegate.h  PluginServiceProxy.h  PluginServiceProxyBase.h  SenseKit-adapter-private.h  SenseKit-openni-private.h  SenseKit-openni.c  SenseKit-private.h  SenseKit.c  SenseKit.cpp  SenseKitAL.cpp  SenseKitAL.h  (+39 more)
src/Astra/: Astra.cpp  Astra.cpp.lpp  AstraContext.cpp  AstraContext.cpp.lpp  AstraContext.h  AstraContext.h.lpp  AstraContextImpl.cpp  AstraContextImpl.h  AstraContextImpl.h.lpp  CMakeLists.txt  Configuration.cpp  Configuration.h  CreatePluginProxy.h  CreatePluginProxy.h.lpp  CreateStreamProxy.h  CreateStreamProxy.h.lpp  Logger.cpp  Logger.h  Logging.cpp  Logging.h  ParameterBin.h  PluginManager.cpp  PluginManager.h  PluginService.cpp  PluginService.cpp.lpp  PluginService.h  PluginService.h.lpp  PluginServiceDelegate.h  PluginServiceDelegate.h.lpp  PluginServiceImpl.cpp  PluginServiceImpl.h  PluginServiceImpl.h.lpp  Registry.cpp  Registry.h  Signal.h  Stream.cpp  Stream.h  StreamBackend.cpp  StreamBackend.h  StreamBin.cpp  (+74 more)
src/AstraAPI/: AstraAPI.cpp  AstraAPI.cpp.lpp  AstraAPI.h  CMakeLists.txt
src/AstraUL/: AstraUL.cpp  CMakeLists.txt  color_capi.cpp  depth_capi.cpp  generic_stream_api.h  hand_capi.cpp  image_capi.cpp  infrared_capi.cpp  point_capi.cpp  skeleton_capi.cpp
src/SenseKit/: Android.mk  CMakeLists.txt  Configuration.cpp  Configuration.h  CreatePluginProxy.h  CreatePluginProxy.h.lpp  CreateStreamProxy.h  CreateStreamProxy.h.lpp  Logger.cpp  Logger.h  Logging.cpp  Logging.h  ParameterBin.h  PluginManager.cpp  PluginManager.h  PluginService.cpp  PluginService.cpp.lpp  PluginService.h  PluginService.h.lpp  PluginServiceDelegate.h  PluginServiceDelegate.h.lpp  PluginServiceImpl.cpp  PluginServiceImpl.h  PluginServiceImpl.h.lpp  PluginServiceProxyBase.h  Registry.cpp  Registry.h  SenseKit.cpp  SenseKit.cpp.lpp  SenseKitContext.cpp  SenseKitContext.cpp.lpp  SenseKitContext.h  SenseKitContext.h.lpp  SenseKitContextImpl.cpp  SenseKitContextImpl.h  SenseKitContextImpl.h.lpp  Stream.cpp  Stream.h  StreamBackend.cpp  StreamBackend.h  (+22 more)
src/SenseKitAPI/: Android.mk  CMakeLists.txt  SenseKitAPI.cpp  SenseKitAPI.cpp.lpp  SenseKitAPI.h
src/SenseKitBridge/: CMakeLists.txt  SenseKitAL.cpp  SenseKitAL.h
src/SenseKitUL/: Android.mk  CMakeLists.txt  SenseKitSL.cpp  SenseKitUL.cpp  SenseKitUL_internal.h  color_capi.cpp  colorstream_capi.cpp  depth_capi.cpp  depthstream_capi.cpp  generic_stream_api.h  hand_capi.cpp  image_capi.cpp  point_capi.cpp  skeleton_capi.cpp
src/android/: .gitignore  CMakeLists.txt  CopyFiles.cmake  build.gradle  settings.gradle
src/astra/: CMakeLists.txt  astra.cpp  astra_color.cpp  astra_depth.cpp  astra_generic_stream_api.hpp  astra_hand.cpp  astra_image.cpp  astra_infrared.cpp  astra_point.cpp  astra_skeleton.cpp
src/astra_core/: CMakeLists.txt  astra.cpp  astra.cpp.lpp  astra_configuration.cpp  astra_configuration.hpp  astra_context.cpp  astra_context.cpp.lpp  astra_context.hpp  astra_context.hpp.lpp  astra_context_impl.cpp  astra_context_impl.hpp  astra_context_impl.hpp.lpp  astra_create_plugin_proxy.hpp  astra_create_plugin_proxy.hpp.lpp  astra_create_stream_proxy.hpp  astra_create_stream_proxy.hpp.lpp  astra_cxx_compatibility.hpp  astra_cxx_make_unique.hpp  astra_environment.hpp  astra_filesystem.cpp  astra_filesystem.hpp  astra_logger.cpp  astra_logger.hpp  astra_logging.cpp  astra_logging.hpp  astra_parameter_bin.hpp  astra_platform.hpp  astra_plugin_manager.cpp  astra_plugin_manager.hpp  astra_plugin_service.cpp  astra_plugin_service.cpp.lpp  astra_plugin_service.hpp  astra_plugin_service.hpp.lpp  astra_plugin_service_delegate.hpp  astra_plugin_service_delegate.hpp.lpp  astra_private.h  (+31 more)
tests/: CMakeLists.txt  main.cpp
(+688 files in other folders)
